--- a/QgisModelBaker/ui/workflow_wizard/import_schema_configuration.ui
+++ b/QgisModelBaker/ui/workflow_wizard/import_schema_configuration.ui
@@ -51,7 +51,7 @@
       <item row="0" column="0" colspan="2">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Models to create database with</string>
+         <string>Models to create database with. Uncheck it, if it should not be imported</string>
         </property>
        </widget>
       </item>
