--- a/QgisModelBaker/ui/ili2db_options.ui
+++ b/QgisModelBaker/ui/ili2db_options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>552</width>
-    <height>622</height>
+    <height>733</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,17 +17,7 @@
    <bool>true</bool>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="7" column="0">
-    <widget class="QLabel" name="metaconfig_info_label">
-     <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:large; color:#341d5c;&quot;&gt;▪ &lt;/span&gt;&lt;span style=&quot; color:#341d5c;&quot;&gt;corresponds to the metaconfig &lt;/span&gt;&lt;span style=&quot; font-size:large; color:#c64600;&quot;&gt;▪ &lt;/span&gt;&lt;span style=&quot; color:#c64600;&quot;&gt;deviates from the metaconfig&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-     <property name="textFormat">
-      <enum>Qt::RichText</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
+   <item row="2" column="1">
     <widget class="QGroupBox" name="create_import_tid_groupbox">
      <property name="title">
       <string>Create Import Tid</string>
@@ -49,7 +39,84 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="3" column="1">
+    <widget class="QGroupBox" name="create_gpkg_multigeom_groupbox">
+     <property name="title">
+      <string>Multiple Geometries per Table in GeoPackage</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_7">
+      <item row="0" column="0">
+       <widget class="QCheckBox" name="create_gpkg_multigeom_checkbox">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If the INTERLIS model has classes that contain &lt;span style=&quot; font-weight:600;&quot;&gt;multiple geometries&lt;/span&gt;, tables with multiple geometry columns can be created in &lt;span style=&quot; font-weight:600;&quot;&gt;GeoPackage&lt;/span&gt;.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="text">
+         <string>Create Multiple Geometry Columns per Table</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="title">
+      <string>Stroke arcs</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_5">
+      <item row="0" column="0">
+       <widget class="QCheckBox" name="stroke_arcs_checkbox">
+        <property name="toolTip">
+         <string>If this option is activated, circular arcs are stroked when importing the data</string>
+        </property>
+        <property name="text">
+         <string>Stroke Arcs</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QFrame" name="frame">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <widget class="QLabel" name="toml_file_label">
+        <property name="text">
+         <string>Extra Meta Attribute File</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="toml_file_line_edit">
+        <property name="toolTip">
+         <string>Choose optional TOML file</string>
+        </property>
+        <property name="placeholderText">
+         <string>[Optional]</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QToolButton" name="toml_file_browse_button">
+        <property name="toolTip">
+         <string>Browse TOML files</string>
+        </property>
+        <property name="text">
+         <string>…</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="1" column="1">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Create Basket Column</string>
@@ -68,7 +135,43 @@
      </layout>
     </widget>
    </item>
-   <item row="5" column="0" colspan="2">
+   <item row="0" column="1">
+    <widget class="QGroupBox" name="inheritance_group_box">
+     <property name="title">
+      <string>Inheritance type</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QRadioButton" name="smart1_radio_button">
+        <property name="toolTip">
+         <string>Form the inheritance hierarchy with a dynamic strategy. The NewClass strategy is used for classes that are
+referenced and whose base classes are not mapped using a NewClass strategy. Abstract classes are mapped
+using a SubClass strategy. Concrete classes, without a base class or their direct base classes with a SubClass
+strategy are mapped using a NewClass strategy. All other classes are mapped using a SuperClass strategy.</string>
+        </property>
+        <property name="text">
+         <string>smart1Inheritance</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="smart2_radio_button">
+        <property name="toolTip">
+         <string>Form the inheritance hierarchy with a dymamic strategy. Abstract classes are mapped using a SubClass
+strategy. Concrete classes are mapped using a NewAndSubClass strategy.</string>
+        </property>
+        <property name="text">
+         <string>smart2Inheritance</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="5" column="1">
     <widget class="QGroupBox" name="groupBox_4">
      <property name="title">
       <string>SQL scripts</string>
@@ -137,7 +240,17 @@
      </layout>
     </widget>
    </item>
-   <item row="8" column="0">
+   <item row="8" column="1" colspan="2">
+    <widget class="QLabel" name="metaconfig_info_label">
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:large; color:#341d5c;&quot;&gt;▪ &lt;/span&gt;&lt;span style=&quot; color:#341d5c;&quot;&gt;corresponds to the metaconfig &lt;/span&gt;&lt;span style=&quot; font-size:large; color:#c64600;&quot;&gt;▪ &lt;/span&gt;&lt;span style=&quot; color:#c64600;&quot;&gt;deviates from the metaconfig&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::RichText</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -147,114 +260,57 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
-    <widget class="QGroupBox" name="groupBox_3">
+   <item row="7" column="1">
+    <widget class="QGroupBox" name="translation_groupbox">
+     <property name="toolTip">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Using translation models (&lt;span style=&quot; font-family:'monospace';&quot;&gt;TRANSLATION OF&lt;/span&gt;), you can create the database in the target translation language. By default, the database is created in the original model’s language. This setting controls the &lt;span style=&quot; font-family:'monospace';&quot;&gt;ili2db&lt;/span&gt; parameter &lt;span style=&quot; font-family:'monospace';&quot;&gt;nameLang = &amp;quot;fr&amp;quot;&lt;/span&gt;.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
      <property name="title">
-      <string>Stroke arcs</string>
+      <string>Translation</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_5">
+     <layout class="QGridLayout" name="gridLayout_8" columnstretch="0,0">
       <item row="0" column="0">
-       <widget class="QCheckBox" name="stroke_arcs_checkbox">
+       <widget class="QLabel" name="namelang_label">
         <property name="toolTip">
-         <string>If this option is activated, circular arcs are stroked when importing the data</string>
+         <string>Several translations of the INTERLIS model are implemented in the database schema (TRANSLATION OF).
+Select the language in which the QGIS project is to be set up.</string>
         </property>
         <property name="text">
-         <string>Stroke Arcs</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="6" column="0" colspan="2">
-    <widget class="QFrame" name="frame">
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
-       <widget class="QLabel" name="toml_file_label">
-        <property name="text">
-         <string>Extra Meta Attribute File</string>
+         <string>Language in which the database should be created</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLineEdit" name="toml_file_line_edit">
-        <property name="toolTip">
-         <string>Choose optional TOML file</string>
+       <widget class="QComboBox" name="namelang_combo">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-        <property name="placeholderText">
-         <string>[Optional]</string>
+        <property name="sizeAdjustPolicy">
+         <enum>QComboBox::AdjustToContents</enum>
         </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QToolButton" name="toml_file_browse_button">
-        <property name="toolTip">
-         <string>Browse TOML files</string>
-        </property>
-        <property name="text">
-         <string>…</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QGroupBox" name="inheritance_group_box">
-     <property name="title">
-      <string>Inheritance type</string>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QRadioButton" name="smart1_radio_button">
-        <property name="toolTip">
-         <string>Form the inheritance hierarchy with a dynamic strategy. The NewClass strategy is used for classes that are
-referenced and whose base classes are not mapped using a NewClass strategy. Abstract classes are mapped
-using a SubClass strategy. Concrete classes, without a base class or their direct base classes with a SubClass
-strategy are mapped using a NewClass strategy. All other classes are mapped using a SuperClass strategy.</string>
-        </property>
-        <property name="text">
-         <string>smart1Inheritance</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="smart2_radio_button">
-        <property name="toolTip">
-         <string>Form the inheritance hierarchy with a dymamic strategy. Abstract classes are mapped using a SubClass
-strategy. Concrete classes are mapped using a NewAndSubClass strategy.</string>
-        </property>
-        <property name="text">
-         <string>smart2Inheritance</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <widget class="QGroupBox" name="create_gpkg_multigeom_groupbox">
-     <property name="title">
-      <string>Multiple Geometries per Table in GeoPackage</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_7">
-      <item row="0" column="0">
-       <widget class="QCheckBox" name="create_gpkg_multigeom_checkbox">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If the INTERLIS model has classes that contain &lt;span style=&quot; font-weight:600;&quot;&gt;multiple geometries&lt;/span&gt;, tables with multiple geometry columns can be created in &lt;span style=&quot; font-weight:600;&quot;&gt;GeoPackage&lt;/span&gt;.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-        <property name="text">
-         <string>Create Multiple Geometry Columns per Table</string>
-        </property>
+        <item>
+         <property name="text">
+          <string>Original model language</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>French</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>German</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Italian</string>
+         </property>
+        </item>
        </widget>
       </item>
      </layout>
